fixed the swiper local file bugs - fixed the form input for contact page, and the contact info alignment

--- a/css/modules/faqs.scss
+++ b/css/modules/faqs.scss
@@ -20,16 +20,16 @@
 
             > :where(:not(summary)) {
                 margin-right: 1rem;
-                margin-left: 1rem;
+                margin-left: 2rem;
             }
 
             &[open] {
                 padding-bottom: 2rem;
 
                 summary {
+                    position: relative;
                     &::after {
                         content: "";
-                        float: right;
                         text-align: center;
                         width: 12px;
                         height: 12px;
@@ -42,11 +42,11 @@
             }
 
             summary {
-                transition: all 0.5s ease-in-out;
                 box-sizing: border-box;
                 padding: 2rem;
                 font-weight: 700;
                 color: $dark-red;
+                position: relative;
 
                 &::marker {
                     content: none;
@@ -54,7 +54,6 @@
 
                 &::after {
                     content: "";
-                    float: right;
                     text-align: center;
                     width: 12px;
                     height: 12px;
@@ -62,6 +61,10 @@
                     border-right: 3px solid $dark-red;
                     transform: rotate(45deg);
                     margin-top: 5px;
+                    display: inline-block;
+                    position: absolute;
+                    top: 35%;
+                    right: 5%;
                 }
             }
         }
