--- a/css/modules/instagram.scss
+++ b/css/modules/instagram.scss
@@ -33,6 +33,7 @@ section.instagram {
         #sbi_load {
             a.sbi_load_btn {
                 @include button-base($light-orange, 1px solid $light-orange);
+                font-size: 1rem;
                 width: fit-content;
                 box-shadow: unset !important;
             }
